--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="theme-color" content="#ffffff" /> 
+    <meta name="description" content="Coding Portfolio Website made with React" />
 
+    <!-- og meta tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://crypto.dandrecampbell.com/">
+    <meta property="og:title" content="Crypto Updates">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="Crypto Updates">
+    <meta property="og:locale" content="en_US">
+
+    <!-- manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- apple data -->
+    <link rel="apple-touch-icon" href="/devicon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet"> 
+
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    
     <title>Crypto Updates</title>
   </head>
   <body>
